add signed operator portal page
